--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Encriptador de Texto</title>
+        <link rel="shortcut icon" href="img/logo-bg.png" type="image/x-icon" />
         <link rel="stylesheet" href="reset.css" />
         <link rel="stylesheet" href="style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,35 +23,45 @@
             <img src="img/logo.png" alt="logo-alura" class="logo" />
         </header>
         <main class="container">
-            <textarea
-                name="text-input"
-                id="text-input"
-                cols="30"
-                rows="10"
-                placeholder="Ingrese el texto aqui"
-            ></textarea>
-
-            <p>Solo letras minusculas y sin acento</p>
-            <div class="buttons-container">
-                <input
-                    type="submit"
-                    value="Encriptar"
-                    class="btn btn-encrypt"
-                    id="btn-encrypt"
-                />
-                <input
-                    type="submit"
-                    value="Desencriptar"
-                    class="btn btn-decrypt"
-                    id="btn-decrypt"
-                />
+            <div class="input-container">
+                <textarea
+                    name="text-input"
+                    id="text-input"
+                    cols="30"
+                    rows="10"
+                    placeholder="Ingrese el texto aqui"
+                ></textarea>
+                <p class="restrictions-msg">
+                    <i class="fa-solid fa-circle-exclamation"></i> Solo letras
+                    minusculas y sin acento
+                </p>
+                <div class="buttons-container">
+                    <input
+                        type="submit"
+                        value="Encriptar"
+                        class="btn btn-encrypt"
+                        id="btn-encrypt"
+                    />
+                    <input
+                        type="submit"
+                        value="Desencriptar"
+                        class="btn btn-decrypt"
+                        id="btn-decrypt"
+                    />
+                </div>
             </div>
-            <div class="text-output">
-                <img src="img/nomsg.png" alt="no-message-logo" />
-                <p>Ningun mensaje fue encontrado</p>
+            <div class="output-container">
+                <img
+                    src="img/nomsg.png"
+                    alt="no-message-logo"
+                    id="img-nomsg"
+                    width="200"
+                />
+                <p class="large-bold">Ningun mensaje fue encontrado</p>
                 <p>Ingrese el texto que desees encriptar o desencriptar.</p>
             </div>
         </main>
+        <hr />
         <footer>
             <p>Challenge: Encriptador de Texto | Oracle ONE | Alura</p>
             <p>
