fix: minor issues for mobile view
Change in footer to better adapt to mobile view.

Change color scheme for dark mode.

Fix issue with buttons overlay when pressed in
mobile view.

Review-by: Dev-Totti

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <header>
-            <img src="img/logo.png" alt="logo-alura" class="logo" />
+            <img src="img/logo.png" alt="Alura Logo" class="logo" />
         </header>
         <main>
             <section class="input-container">
@@ -87,20 +87,14 @@
                 </div>
             </section>
         </main>
-        <!-- <hr /> -->
         <footer>
             <p>
-                &copy Copyright 2024 - Encriptador de Texto | Oracle ONE | Alura
-            </p>
-            <p>
-                Elaborado por Cristian Villa |
+                &copy Copyright 2024 |
                 <i class="fa-brands fa-linkedin"></i>
-                <a href="https://www.linkedin.com/in/Cristian-Villa-Dev"
-                    >Cristian Villa</a
-                >
+                <a href=""> Cristian Villa</a>
                 |
                 <i class="fa-brands fa-github"></i>
-                <a href="https://www.github.com/Dev-Totti">Dev-Totti</a>
+                <a href="">Dev-Totti</a>
             </p>
         </footer>
         <script src="app.js"></script>
