fix: social media links Fix the social media links in the footer having empty href attributes.

--- a/index.html
+++ b/index.html
@@ -91,10 +91,12 @@
             <p>
                 &copy Copyright 2024 |
                 <i class="fa-brands fa-linkedin"></i>
-                <a href=""> Cristian Villa</a>
+                <a href="https://www.linkedin.com/in/Cristian-Villa-Dev/">
+                    Cristian Villa</a
+                >
                 |
                 <i class="fa-brands fa-github"></i>
-                <a href="">Dev-Totti</a>
+                <a href="https://github.com/Dev-Totti">Dev-Totti</a>
             </p>
         </footer>
         <script src="app.js"></script>
